--- a/Notes/Chapter_00_Subject_Introduction.ipynb
+++ b/Notes/Chapter_00_Subject_Introduction.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -17,7 +16,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -43,7 +41,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -141,7 +138,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -154,7 +150,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR ANSWER HERE"
+    "1. True\n",
+    "2. 0.5\n",
+    "3. 0.5\n",
+    "4. False\n",
+    "5. False\n",
+    "6. False\n",
+    "7. \"53True\"\n",
+    "8. 10, 20"
    ]
   },
   {
@@ -171,19 +174,18 @@
     "- Print out the users last and first names in that order.\n",
     "\n",
     "Example interaction between the program and the user. (note: words on the 2nd and 4th line are from the computer, based on the program, while the words on 3rd and 5th line ('Daren', 'Ler' respectively) are a user's input):\n",
-    ">```python\n",
-    ">>>>\n",
-    ">Enter your last name:\n",
-    ">Daren\n",
-    ">Enter your first name:\n",
-    ">Ler\n",
-    ">Ler #output\n",
-    ">Daren #output\n",
-    ">>>>"
+    "\n",
+    "```python\n",
+    "Enter your last name:\n",
+    "Daren\n",
+    "Enter your first name:\n",
+    "Ler\n",
+    "Ler #output\n",
+    "Daren #output\n",
+    "```"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -196,7 +198,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "lname = input(\"Enter your last name:\\n\")\n",
+    "fname = input(\"Enter your first name:\\n\")\n",
+    "\n",
+    "print(fname)\n",
+    "print(lname)"
    ]
   },
   {
@@ -212,7 +218,7 @@
  "metadata": {
   "file_extension": ".py",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -226,12 +232,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.10"
   },
   "mimetype": "text/x-python",
   "name": "python",
   "npconvert_exporter": "python",
-  "orig_nbformat": 2,
   "pygments_lexer": "ipython3",
   "version": 3,
   "vscode": {
