--- a/Notes/Chapter_01_Data_Types.ipynb
+++ b/Notes/Chapter_01_Data_Types.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -14,7 +13,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -96,7 +94,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -109,11 +106,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR ANSWER HERE"
+    "1. bool\n",
+    "2. float\n",
+    "3. str\n",
+    "4. int\n",
+    "5. str\n",
+    "6. int\n",
+    "7. str\n",
+    "8. bool\n",
+    "9. str\n",
+    "10. float\n",
+    "11. float\n",
+    "12. bool\n",
+    "13. str"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -193,7 +201,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -210,7 +217,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -269,7 +275,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -293,7 +298,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -313,7 +317,7 @@
  "metadata": {
   "file_extension": ".py",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -327,12 +331,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.10"
   },
   "mimetype": "text/x-python",
   "name": "python",
   "npconvert_exporter": "python",
-  "orig_nbformat": 2,
   "pygments_lexer": "ipython3",
   "version": 3,
   "vscode": {
