--- a/Notes/Chapter_01_Data_Types.ipynb
+++ b/Notes/Chapter_01_Data_Types.ipynb
@@ -213,7 +213,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR ANSWER HERE"
+    "1. False\n",
+    "2. True\n",
+    "3. True\n",
+    "4. True\n",
+    "5. False"
    ]
   },
   {
@@ -310,14 +314,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# THIS IS A CODE BLOCK"
+    "1. True\n",
+    "2. 0.5\n",
+    "3. 0.5\n",
+    "4. False\n",
+    "5. False\n",
+    "6. False\n",
+    "7. 53True\n",
+    "8. 10,  20"
    ]
   }
  ],
  "metadata": {
   "file_extension": ".py",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -331,7 +342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.1"
   },
   "mimetype": "text/x-python",
   "name": "python",
@@ -340,7 +351,7 @@
   "version": 3,
   "vscode": {
    "interpreter": {
-    "hash": "a42ccb73e7d9bfdf27e036f1d2b8b681e55fc0743cc5586bc2474d4a60f4b886"
+    "hash": "033afebc77ce116f8b4e5adc75a85edec4479cc7d7b8a0d9079b4c316c15d572"
    }
   }
  },
