--- a/Notes/Chapter_00_Subject_Introduction.ipynb
+++ b/Notes/Chapter_00_Subject_Introduction.ipynb
@@ -218,7 +218,7 @@
  "metadata": {
   "file_extension": ".py",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -232,7 +232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.1"
   },
   "mimetype": "text/x-python",
   "name": "python",
@@ -241,7 +241,7 @@
   "version": 3,
   "vscode": {
    "interpreter": {
-    "hash": "a42ccb73e7d9bfdf27e036f1d2b8b681e55fc0743cc5586bc2474d4a60f4b886"
+    "hash": "033afebc77ce116f8b4e5adc75a85edec4479cc7d7b8a0d9079b4c316c15d572"
    }
   }
  },
