--- a/Notes/Chapter_02_Programming_Constructs.ipynb
+++ b/Notes/Chapter_02_Programming_Constructs.ipynb
@@ -341,12 +341,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "1. "
+    "1. none\n",
+    "2. 15\n",
+    "3. 13\n",
+    "4. 0"
    ]
   },
   {
@@ -449,11 +450,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "S\n",
+      "S\n",
+      "A\n",
+      "A\n"
+     ]
+    }
+   ],
    "source": [
-    "#YOUR ANSWER HERE"
+    "while True:\n",
+    "    mark = input(\"Enter mark: \")\n",
+    "    try:\n",
+    "        mark = int(mark)\n",
+    "    except:\n",
+    "        break\n",
+    "    \n",
+    "    ranges = [69, 59, 54, 49, 44, -1]\n",
+    "    grades = [\"A\", \"B\", \"C\", \"D\", \"E\", \"S\", \"U\"]\n",
+    "    for i in range(len(ranges)):\n",
+    "        if mark > ranges[i]:\n",
+    "            print(grades[i])\n",
+    "            break"
    ]
   },
   {
@@ -483,11 +507,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t\n",
+      "e\n",
+      "s\n",
+      "t\n",
+      " \n",
+      "s\n",
+      "t\n",
+      "r\n",
+      "i\n",
+      "n\n",
+      "g\n"
+     ]
+    }
+   ],
    "source": [
-    "#YOUR ANSWER HERE"
+    "x = input(\"Please enter a string: \")\n",
+    "for i in x:\n",
+    "    print(i)"
    ]
   },
   {
@@ -513,11 +557,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "2\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR ANSWER HERE"
+    "x = input(\"Please enter a string: \")\n",
+    "for i in x[::-1]:\n",
+    "    print(i)"
    ]
   },
   {
@@ -549,11 +605,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "9\n",
+      "15\n",
+      "25\n",
+      "45\n",
+      "75\n",
+      "225\n"
+     ]
+    }
+   ],
    "source": [
-    "#YOUR ANSWER HERE"
+    "import math\n",
+    "x = int(input(\"Please enter a positive integer: \"))\n",
+    "i = 1\n",
+    "factors = []\n",
+    "while i <= math.sqrt(x):\n",
+    "    if x % i == 0:\n",
+    "        factors.append(i)\n",
+    "        factors.append(int(x/i))\n",
+    "    i += 1\n",
+    "\n",
+    "factors = list(set(factors))\n",
+    "factors.sort()\n",
+    "\n",
+    "for j in factors:\n",
+    "    print(j)"
    ]
   },
   {
@@ -607,12 +693,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#YOUR ANSWER HERE"
+    "1. infinite loop\n",
+    "2. infinite loop\n",
+    "3. OXOO"
    ]
   },
   {
@@ -669,12 +755,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#YOUR ANSWER HERE"
+    "1. 10, 9, 8, 7, 6, 5, 4\n",
+    "2. 0, 1, 2, 3, 4\n",
+    "3. 10, 9, 8, 7\n",
+    "4. Letter #0 is S, Letter #1 is n, Letter #2 is o, Letter #3 is w, Letter #4 is !"
    ]
   },
   {
@@ -754,12 +841,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#YOUR ANSWER HERE"
+    "1. OO\n",
+    "2. OOO\n",
+    "3. OOO\n",
+    "4. OOOO"
    ]
   },
   {
@@ -818,15 +906,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#YOUR ANSWER HERE"
+    "1. XOXOXOXO\n",
+    "2. infinite loop\n",
+    "3. XOXOXO"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -837,13 +926,13 @@
     ">```python\n",
     ">a = 1 \n",
     ">while a < 3: \n",
-    ">   b = 1  \t\n",
-    ">   while b < 3:  \t \t\n",
-    ">       if a == 2:  \t \t \t\n",
-    ">           print(\"X\", end = \"\")  \t \t\n",
-    ">       print \"O\",  \t \t\n",
-    ">       b = b + 1 \n",
-    ">   print(\"O\", end = \"\") \n",
+    ">  b = 1  \t\n",
+    ">  while b < 3:  \t \t\n",
+    ">      if a == 2:  \t \t \t\n",
+    ">          print(\"X\", end = \"\")  \t \t\n",
+    ">      print \"O\",  \t \t\n",
+    ">      b = b + 1 \n",
+    ">  print(\"O\", end = \"\") \n",
     ">print(\"\")\n",
     ">```"
    ]
@@ -857,11 +946,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XO\n"
+     ]
+    }
+   ],
    "source": [
-    "#YOUR ANSWER HERE"
+    "# Unsolvable cause code brokey"
    ]
   },
   {
@@ -884,11 +981,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5050\n",
+      "5050.0\n"
+     ]
+    }
+   ],
    "source": [
-    "#YOUR ANSWER HERE"
+    "# Method 1\n",
+    "sum = 0\n",
+    "upperLimit = 100\n",
+    "for i in range(upperLimit):\n",
+    "    sum += i + 1\n",
+    "print(sum)\n",
+    "\n",
+    "# Method 2 (upperLimit must be even)\n",
+    "upperLimit = 100\n",
+    "sum = (upperLimit + 1) * (upperLimit / 2)\n",
+    "print(int(sum))"
    ]
   },
   {
@@ -918,7 +1034,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.1"
   },
   "mimetype": "text/x-python",
   "name": "python",
