--- a/Notes/Chapter_02_Programming_Constructs.ipynb
+++ b/Notes/Chapter_02_Programming_Constructs.ipynb
@@ -254,18 +254,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "S\n"
+      "Invalid\n"
      ]
     }
    ],
    "source": [
-    "mark = int(input(\"Enter mark: \"))\n",
-    "ranges = [69, 59, 54, 49, 44, -1]\n",
-    "grades = [\"A\", \"B\", \"C\", \"D\", \"E\", \"S\", \"U\"]\n",
-    "for i in range(len(ranges)):\n",
-    "    if mark > ranges[i]:\n",
-    "        print(grades[i])\n",
-    "        break"
+    "mark = input(\"Enter mark: \")\n",
+    "try:\n",
+    "    mark = int(mark)\n",
+    "except:\n",
+    "    print(\"Invalid\")\n",
+    "else:\n",
+    "    ranges = [100, 69, 59, 54, 49, 44, 39, -1]\n",
+    "    grades = [\"Invalid\", \"A\", \"B\", \"C\", \"D\", \"E\", \"S\", \"U\"]\n",
+    "    for i in range(len(ranges)):\n",
+    "        if mark > ranges[i]:\n",
+    "            print(grades[i])\n",
+    "            break\n",
+    "    else:\n",
+    "        print(\"Invalid\")"
    ]
   },
   {
@@ -292,20 +299,318 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "n = 0\n",
+      "n^5 is 0\n",
+      "last digit is 0\n",
+      "n = 1\n",
+      "n^5 is 1\n",
+      "last digit is 1\n",
+      "n = 2\n",
+      "n^5 is 32\n",
+      "last digit is 2\n",
       "n = 3\n",
       "n^5 is 243\n",
-      "They both have the last digit: 3\n"
+      "last digit is 3\n",
+      "n = 4\n",
+      "n^5 is 1024\n",
+      "last digit is 4\n",
+      "n = 5\n",
+      "n^5 is 3125\n",
+      "last digit is 5\n",
+      "n = 6\n",
+      "n^5 is 7776\n",
+      "last digit is 6\n",
+      "n = 7\n",
+      "n^5 is 16807\n",
+      "last digit is 7\n",
+      "n = 8\n",
+      "n^5 is 32768\n",
+      "last digit is 8\n",
+      "n = 9\n",
+      "n^5 is 59049\n",
+      "last digit is 9\n",
+      "n = 10\n",
+      "n^5 is 100000\n",
+      "last digit is 0\n",
+      "n = 11\n",
+      "n^5 is 161051\n",
+      "last digit is 1\n",
+      "n = 12\n",
+      "n^5 is 248832\n",
+      "last digit is 2\n",
+      "n = 13\n",
+      "n^5 is 371293\n",
+      "last digit is 3\n",
+      "n = 14\n",
+      "n^5 is 537824\n",
+      "last digit is 4\n",
+      "n = 15\n",
+      "n^5 is 759375\n",
+      "last digit is 5\n",
+      "n = 16\n",
+      "n^5 is 1048576\n",
+      "last digit is 6\n",
+      "n = 17\n",
+      "n^5 is 1419857\n",
+      "last digit is 7\n",
+      "n = 18\n",
+      "n^5 is 1889568\n",
+      "last digit is 8\n",
+      "n = 19\n",
+      "n^5 is 2476099\n",
+      "last digit is 9\n",
+      "n = 20\n",
+      "n^5 is 3200000\n",
+      "last digit is 0\n",
+      "n = 21\n",
+      "n^5 is 4084101\n",
+      "last digit is 1\n",
+      "n = 22\n",
+      "n^5 is 5153632\n",
+      "last digit is 2\n",
+      "n = 23\n",
+      "n^5 is 6436343\n",
+      "last digit is 3\n",
+      "n = 24\n",
+      "n^5 is 7962624\n",
+      "last digit is 4\n",
+      "n = 25\n",
+      "n^5 is 9765625\n",
+      "last digit is 5\n",
+      "n = 26\n",
+      "n^5 is 11881376\n",
+      "last digit is 6\n",
+      "n = 27\n",
+      "n^5 is 14348907\n",
+      "last digit is 7\n",
+      "n = 28\n",
+      "n^5 is 17210368\n",
+      "last digit is 8\n",
+      "n = 29\n",
+      "n^5 is 20511149\n",
+      "last digit is 9\n",
+      "n = 30\n",
+      "n^5 is 24300000\n",
+      "last digit is 0\n",
+      "n = 31\n",
+      "n^5 is 28629151\n",
+      "last digit is 1\n",
+      "n = 32\n",
+      "n^5 is 33554432\n",
+      "last digit is 2\n",
+      "n = 33\n",
+      "n^5 is 39135393\n",
+      "last digit is 3\n",
+      "n = 34\n",
+      "n^5 is 45435424\n",
+      "last digit is 4\n",
+      "n = 35\n",
+      "n^5 is 52521875\n",
+      "last digit is 5\n",
+      "n = 36\n",
+      "n^5 is 60466176\n",
+      "last digit is 6\n",
+      "n = 37\n",
+      "n^5 is 69343957\n",
+      "last digit is 7\n",
+      "n = 38\n",
+      "n^5 is 79235168\n",
+      "last digit is 8\n",
+      "n = 39\n",
+      "n^5 is 90224199\n",
+      "last digit is 9\n",
+      "n = 40\n",
+      "n^5 is 102400000\n",
+      "last digit is 0\n",
+      "n = 41\n",
+      "n^5 is 115856201\n",
+      "last digit is 1\n",
+      "n = 42\n",
+      "n^5 is 130691232\n",
+      "last digit is 2\n",
+      "n = 43\n",
+      "n^5 is 147008443\n",
+      "last digit is 3\n",
+      "n = 44\n",
+      "n^5 is 164916224\n",
+      "last digit is 4\n",
+      "n = 45\n",
+      "n^5 is 184528125\n",
+      "last digit is 5\n",
+      "n = 46\n",
+      "n^5 is 205962976\n",
+      "last digit is 6\n",
+      "n = 47\n",
+      "n^5 is 229345007\n",
+      "last digit is 7\n",
+      "n = 48\n",
+      "n^5 is 254803968\n",
+      "last digit is 8\n",
+      "n = 49\n",
+      "n^5 is 282475249\n",
+      "last digit is 9\n",
+      "n = 50\n",
+      "n^5 is 312500000\n",
+      "last digit is 0\n",
+      "n = 51\n",
+      "n^5 is 345025251\n",
+      "last digit is 1\n",
+      "n = 52\n",
+      "n^5 is 380204032\n",
+      "last digit is 2\n",
+      "n = 53\n",
+      "n^5 is 418195493\n",
+      "last digit is 3\n",
+      "n = 54\n",
+      "n^5 is 459165024\n",
+      "last digit is 4\n",
+      "n = 55\n",
+      "n^5 is 503284375\n",
+      "last digit is 5\n",
+      "n = 56\n",
+      "n^5 is 550731776\n",
+      "last digit is 6\n",
+      "n = 57\n",
+      "n^5 is 601692057\n",
+      "last digit is 7\n",
+      "n = 58\n",
+      "n^5 is 656356768\n",
+      "last digit is 8\n",
+      "n = 59\n",
+      "n^5 is 714924299\n",
+      "last digit is 9\n",
+      "n = 60\n",
+      "n^5 is 777600000\n",
+      "last digit is 0\n",
+      "n = 61\n",
+      "n^5 is 844596301\n",
+      "last digit is 1\n",
+      "n = 62\n",
+      "n^5 is 916132832\n",
+      "last digit is 2\n",
+      "n = 63\n",
+      "n^5 is 992436543\n",
+      "last digit is 3\n",
+      "n = 64\n",
+      "n^5 is 1073741824\n",
+      "last digit is 4\n",
+      "n = 65\n",
+      "n^5 is 1160290625\n",
+      "last digit is 5\n",
+      "n = 66\n",
+      "n^5 is 1252332576\n",
+      "last digit is 6\n",
+      "n = 67\n",
+      "n^5 is 1350125107\n",
+      "last digit is 7\n",
+      "n = 68\n",
+      "n^5 is 1453933568\n",
+      "last digit is 8\n",
+      "n = 69\n",
+      "n^5 is 1564031349\n",
+      "last digit is 9\n",
+      "n = 70\n",
+      "n^5 is 1680700000\n",
+      "last digit is 0\n",
+      "n = 71\n",
+      "n^5 is 1804229351\n",
+      "last digit is 1\n",
+      "n = 72\n",
+      "n^5 is 1934917632\n",
+      "last digit is 2\n",
+      "n = 73\n",
+      "n^5 is 2073071593\n",
+      "last digit is 3\n",
+      "n = 74\n",
+      "n^5 is 2219006624\n",
+      "last digit is 4\n",
+      "n = 75\n",
+      "n^5 is 2373046875\n",
+      "last digit is 5\n",
+      "n = 76\n",
+      "n^5 is 2535525376\n",
+      "last digit is 6\n",
+      "n = 77\n",
+      "n^5 is 2706784157\n",
+      "last digit is 7\n",
+      "n = 78\n",
+      "n^5 is 2887174368\n",
+      "last digit is 8\n",
+      "n = 79\n",
+      "n^5 is 3077056399\n",
+      "last digit is 9\n",
+      "n = 80\n",
+      "n^5 is 3276800000\n",
+      "last digit is 0\n",
+      "n = 81\n",
+      "n^5 is 3486784401\n",
+      "last digit is 1\n",
+      "n = 82\n",
+      "n^5 is 3707398432\n",
+      "last digit is 2\n",
+      "n = 83\n",
+      "n^5 is 3939040643\n",
+      "last digit is 3\n",
+      "n = 84\n",
+      "n^5 is 4182119424\n",
+      "last digit is 4\n",
+      "n = 85\n",
+      "n^5 is 4437053125\n",
+      "last digit is 5\n",
+      "n = 86\n",
+      "n^5 is 4704270176\n",
+      "last digit is 6\n",
+      "n = 87\n",
+      "n^5 is 4984209207\n",
+      "last digit is 7\n",
+      "n = 88\n",
+      "n^5 is 5277319168\n",
+      "last digit is 8\n",
+      "n = 89\n",
+      "n^5 is 5584059449\n",
+      "last digit is 9\n",
+      "n = 90\n",
+      "n^5 is 5904900000\n",
+      "last digit is 0\n",
+      "n = 91\n",
+      "n^5 is 6240321451\n",
+      "last digit is 1\n",
+      "n = 92\n",
+      "n^5 is 6590815232\n",
+      "last digit is 2\n",
+      "n = 93\n",
+      "n^5 is 6956883693\n",
+      "last digit is 3\n",
+      "n = 94\n",
+      "n^5 is 7339040224\n",
+      "last digit is 4\n",
+      "n = 95\n",
+      "n^5 is 7737809375\n",
+      "last digit is 5\n",
+      "n = 96\n",
+      "n^5 is 8153726976\n",
+      "last digit is 6\n",
+      "n = 97\n",
+      "n^5 is 8587340257\n",
+      "last digit is 7\n",
+      "n = 98\n",
+      "n^5 is 9039207968\n",
+      "last digit is 8\n",
+      "n = 99\n",
+      "n^5 is 9509900499\n",
+      "last digit is 9\n"
      ]
     }
    ],
    "source": [
-    "n = int(input(\"Input n: \"))\n",
-    "print(f\"n = {n}\")\n",
-    "print(f\"n^5 is {n**5}\")\n",
-    "print(f\"They both have the last digit: {str(n)[-1]}\")"
+    "for n in range(100):\n",
+    "    print(f\"n = {n}\")\n",
+    "    print(f\"n^5 is {n**5}\")\n",
+    "    print(f\"last digit is {n%10}\")"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -450,17 +755,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "S\n",
-      "S\n",
-      "A\n",
-      "A\n"
+      "U\n",
+      "S\n"
      ]
     }
    ],
@@ -471,13 +774,15 @@
     "        mark = int(mark)\n",
     "    except:\n",
     "        break\n",
-    "    \n",
-    "    ranges = [69, 59, 54, 49, 44, -1]\n",
-    "    grades = [\"A\", \"B\", \"C\", \"D\", \"E\", \"S\", \"U\"]\n",
+    "\n",
+    "    ranges = [100, 69, 59, 54, 49, 44, 39, -1]\n",
+    "    grades = [\"Invalid\", \"A\", \"B\", \"C\", \"D\", \"E\", \"S\", \"U\"]\n",
     "    for i in range(len(ranges)):\n",
     "        if mark > ranges[i]:\n",
     "            print(grades[i])\n",
-    "            break"
+    "            break\n",
+    "    else:\n",
+    "        print(\"Invalid\")"
    ]
   },
   {
