--- a/Exercises/Exercise-01-Input-For-While.ipynb
+++ b/Exercises/Exercise-01-Input-For-While.ipynb
@@ -44,11 +44,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100 km^2 = 100000000000000.0 mm^2\n"
+     ]
+    }
+   ],
    "source": [
-    "#YOUR CODE HERE"
+    "startQuantity = int(input(\"Input a quantity: \"))\n",
+    "\n",
+    "measurementList = [\"\", \"length\", \"area\", \"volume\"]\n",
+    "measurementChoice = input(\"Select either length, area or volume: \")\n",
+    "\n",
+    "prefixList = [\"m\", \"c\", \"\", \"k\"]\n",
+    "conversionValues = [0.001, 0.01, 1, 1000]\n",
+    "\n",
+    "startUnit = input(\"Select the base unit of measurement (mm, cm, m, km): \")\n",
+    "\n",
+    "endUnit = input(\"Select which base unit of measurement to convert to (mm, cm, m, km): \")\n",
+    "\n",
+    "startPrefix = startUnit[-2::-1]\n",
+    "endPrefix = endUnit[-2::-1]\n",
+    "\n",
+    "baseQuantity = startQuantity * (conversionValues[prefixList.index(startPrefix)] ** measurementList.index(measurementChoice))\n",
+    "endQuantity = baseQuantity / (conversionValues[prefixList.index(endPrefix)] ** measurementList.index(measurementChoice))\n",
+    "\n",
+    "print(f\"{startQuantity} {startPrefix}m^{measurementList.index(measurementChoice)} = {endQuantity} {endPrefix}m^{measurementList.index(measurementChoice)}\")"
    ]
   },
   {
@@ -89,11 +115,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The first 5 terms of the arithmetic sequence are:\n",
+      "2.0\n",
+      "5.0\n",
+      "8.0\n",
+      "11.0\n",
+      "14.0\n"
+     ]
+    }
+   ],
    "source": [
-    "#YOUR CODE HERE"
+    "first_term = float(input(\"Please input the first term in the arithmetic sequence:\\n\"))\n",
+    "common_difference = float(input(\"Please input the common difference:\\n\"))\n",
+    "number_of_terms = int(input(\"Please input the number of terms:\\n\"))\n",
+    "print(\"The first 5 terms of the arithmetic sequence are:\")\n",
+    "for i in range(number_of_terms):\n",
+    "    print(first_term)\n",
+    "    first_term += common_difference"
    ]
   },
   {
@@ -127,11 +172,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Term 5 in the sequence is:\n",
+      "14.0\n",
+      "The sum of the first 5 terms in the sequence is:\n",
+      "40.0\n"
+     ]
+    }
+   ],
    "source": [
-    "#YOUR CODE HERE"
+    "first_term = float(input(\"Please input the first term in the arithmetic sequence:\\n\"))\n",
+    "common_difference = float(input(\"Please inpnut the common difference:\\n\"))\n",
+    "n = int(input(\"Please input the index:\\n\"))\n",
+    "total = 0\n",
+    "first_term -= common_difference\n",
+    "for i in range(n):\n",
+    "    first_term += common_difference\n",
+    "    total += first_term\n",
+    "print(f\"Term {n} in the sequence is:\")\n",
+    "print(first_term)\n",
+    "print(f\"The sum of the first {n} terms in the sequence is:\")\n",
+    "print(total)"
    ]
   },
   {
@@ -145,11 +212,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60\n"
+     ]
+    }
+   ],
    "source": [
-    "#YOUR CODE HERE"
+    "total = 0\n",
+    "n = 0\n",
+    "while total < 1700:\n",
+    "    n += 3\n",
+    "    total = 0\n",
+    "    for i in range(3, n+1, 3):\n",
+    "        total += 3 * i - 1\n",
+    "print(n)"
    ]
   },
   {
@@ -165,17 +247,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mrs A's account first became greater than $5000 on 1 May 2001\n"
+     ]
+    }
+   ],
    "source": [
-    "#YOUR CODE HERE"
+    "balance = 0\n",
+    "addition = 100\n",
+    "monthCount = 0\n",
+    "while balance < 5000:\n",
+    "    balance += addition\n",
+    "    addition += 10\n",
+    "    monthCount += 1\n",
+    "\n",
+    "months = [\"January\", \"Feburary\", \"March\", \"April\", \"May\", \"June\", \"July\", \"August\", \"September\", \"October\", \"November\", \"December\"]\n",
+    "\n",
+    "print(f\"Mrs A's account first became greater than $5000 on 1 {months[monthCount % 12]} {2001 + monthCount//12}\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -189,11 +289,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2 (tags/v3.10.2:a58ebcc, Jan 17 2022, 14:12:15) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.11.1"
   },
   "vscode": {
    "interpreter": {
-    "hash": "a42ccb73e7d9bfdf27e036f1d2b8b681e55fc0743cc5586bc2474d4a60f4b886"
+    "hash": "033afebc77ce116f8b4e5adc75a85edec4479cc7d7b8a0d9079b4c316c15d572"
    }
   }
  },
