completed chapter 02 again

--- a/Notes/Chapter_02_Programming_Constructs.ipynb
+++ b/Notes/Chapter_02_Programming_Constructs.ipynb
@@ -774,12 +774,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#YOUR ANSWER HERE"
+    "1. none\n",
+    "2. 15\n",
+    "3. 13\n",
+    "4. 1"
    ]
   },
   {
