im so bad at git commit messages

--- a/Notes/Chapter_02_Programming_Constructs.ipynb
+++ b/Notes/Chapter_02_Programming_Constructs.ipynb
@@ -778,9 +778,9 @@
    "metadata": {},
    "source": [
     "1. none\n",
-    "2. 15\n",
-    "3. 13\n",
-    "4. 1"
+    "2. 15, 21, 27, 33\n",
+    "3. 11, 12, 13, 14, 16, 17, 18, 19\n",
+    "4. 1, 2, 3, 4, 5, 6, 7, 8, 9, 10"
    ]
   },
   {
@@ -827,15 +827,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "U\n",
-      "S\n"
+      "B\n"
      ]
     }
    ],
@@ -884,24 +883,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "t\n",
+      "a\n",
+      "b\n",
+      "c\n",
+      "d\n",
       "e\n",
-      "s\n",
-      "t\n",
-      " \n",
-      "s\n",
-      "t\n",
-      "r\n",
-      "i\n",
-      "n\n",
-      "g\n"
+      "f\n"
      ]
     }
    ],
@@ -909,6 +903,32 @@
     "x = input(\"Please enter a string: \")\n",
     "for i in x:\n",
     "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "b\n",
+      "c\n",
+      "d\n",
+      "e\n",
+      "f\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = input(\"Please enter a string: \")\n",
+    "count = 0\n",
+    "while count < len(x):\n",
+    "    print(x[count])\n",
+    "    count += 1"
    ]
   },
   {
@@ -951,6 +971,28 @@
     "x = input(\"Please enter a string: \")\n",
     "for i in x[::-1]:\n",
     "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "2\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = int(input(\"Enter a number: \"))\n",
+    "while x != 0:\n",
+    "    print(x % 10)\n",
+    "    x = x // 10"
    ]
   },
   {
