--- a/Exercises/Exercise-02-More-Input-For-While.ipynb
+++ b/Exercises/Exercise-02-More-Input-For-While.ipynb
@@ -36,11 +36,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "8\n",
+      "27\n",
+      "64\n",
+      "125\n"
+     ]
+    }
+   ],
    "source": [
-    "#YOUR CODE HERE"
+    "m = int(input(\"Input the number of terms, m: \"))\n",
+    "n = int(input(\"Input the n-th power: \"))\n",
+    "for i in range(1, m+1):\n",
+    "    print(i ** n)"
    ]
   },
   {
@@ -71,11 +86,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "41\n",
+      "Your number is too low, Try again.\n",
+      "Congratulations\n"
+     ]
+    }
+   ],
    "source": [
-    "#YOUR CODE HERE"
+    "import random\n",
+    "\n",
+    "secret = random.randint(1, 100)\n",
+    "\n",
+    "valueIn = 0\n",
+    "\n",
+    "while secret != valueIn:\n",
+    "    valueIn = int(input(\"Input a quantity\"))\n",
+    "    if secret > valueIn:\n",
+    "        print(\"Your number is too low, Try again.\")\n",
+    "    elif secret < valueIn:\n",
+    "        print(\"Your number is too high, Try again.\")\n",
+    "print(\"Congratulations. You guessed correctly.\")"
    ]
   },
   {
@@ -116,11 +153,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the first 5 terms of the geometric sequence are: \n",
+      "2.0\n",
+      "6.0\n",
+      "18.0\n",
+      "54.0\n",
+      "162.0\n"
+     ]
+    }
+   ],
    "source": [
-    "#YOUR CODE HERE"
+    "first_term = float(input(\"Please input the first term in the geometric sequence: \"))\n",
+    "common_ratio = float(input(\"Please input the common ratio: \"))\n",
+    "number_of_terms = int(input(\"Please input the number of terms: \"))\n",
+    "print(f\"the first {number_of_terms} terms of the geometric sequence are: \")\n",
+    "for i in range(number_of_terms):\n",
+    "    print(first_term)\n",
+    "    first_term *= common_ratio"
    ]
   },
   {
@@ -153,6 +209,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Term 5 in the sequence is:\n",
+      "162.0\n",
+      "The sum of the first 5 terms in the sequence is:\n",
+      "242.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_term = float(input(\"Please input the first term in the geometric sequence: \"))\n",
+    "common_ratio = float(input(\"Please input the common ratio: \"))\n",
+    "n = int(input(\"Please input the index: \"))\n",
+    "total = 0\n",
+    "\n",
+    "print(f\"Term {n} in the sequence is:\")\n",
+    "for i in range(n):\n",
+    "    total += first_term\n",
+    "    first_term *= common_ratio\n",
+    "\n",
+    "print(first_term / common_ratio)\n",
+    "print(\"The sum of the first 5 terms in the sequence is:\")\n",
+    "print(total)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -171,11 +259,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "When r = 2, sum of first 100 terms = 1267650600228229401496703205375\n",
+      "When r = 0.5, sum of first 100 terms = 2.535301200456459e+30\n",
+      "When r = -3, sum of first 100 terms = -1.2884438018300283e+47\n",
+      "When r = -0.8333333333333334, sum of first 100 terms = 2.8111500791399787e+47\n",
+      "When r = 4.1, sum of first 100 terms = 3.810876242278107e+100\n",
+      "When r = 0.7, sum of first 100 terms = 3.937905450354042e+101\n"
+     ]
+    }
+   ],
    "source": [
-    "#YOUR CODE HERE"
+    "rValues = [2, 0.5, -3, -5/6, 4.1, 0.7]\n",
+    "\n",
+    "first_term = 1\n",
+    "common_ratio = 0\n",
+    "n = 100\n",
+    "total = 0\n",
+    "\n",
+    "for i in rValues:\n",
+    "    total = 0\n",
+    "    for j in range(n):\n",
+    "        total += first_term\n",
+    "        first_term *= i\n",
+    "    print(f\"When r = {i}, sum of first {n} terms = {total}\")"
    ]
   },
   {
