--- a/Notes/Chapter_02_Programming_Constructs.ipynb
+++ b/Notes/Chapter_02_Programming_Constructs.ipynb
@@ -990,6 +990,8 @@
    ],
    "source": [
     "x = int(input(\"Enter a number: \"))\n",
+    "if x == 0:\n",
+    "    print(0)\n",
     "while x != 0:\n",
     "    print(x % 10)\n",
     "    x = x // 10"
@@ -1024,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1032,23 +1034,77 @@
      "output_type": "stream",
      "text": [
       "1\n",
-      "3\n",
+      "2\n",
+      "4\n",
       "5\n",
-      "9\n",
-      "15\n",
+      "8\n",
+      "10\n",
+      "16\n",
+      "20\n",
       "25\n",
-      "45\n",
-      "75\n",
-      "225\n"
+      "32\n",
+      "40\n",
+      "50\n",
+      "64\n",
+      "80\n",
+      "100\n",
+      "125\n",
+      "128\n",
+      "160\n",
+      "200\n",
+      "250\n",
+      "320\n",
+      "400\n",
+      "500\n",
+      "625\n",
+      "640\n",
+      "800\n",
+      "1000\n",
+      "1250\n",
+      "1600\n",
+      "2000\n",
+      "2500\n",
+      "3125\n",
+      "3200\n",
+      "4000\n",
+      "5000\n",
+      "6250\n",
+      "8000\n",
+      "10000\n",
+      "12500\n",
+      "15625\n",
+      "16000\n",
+      "20000\n",
+      "25000\n",
+      "31250\n",
+      "40000\n",
+      "50000\n",
+      "62500\n",
+      "78125\n",
+      "80000\n",
+      "100000\n",
+      "125000\n",
+      "156250\n",
+      "200000\n",
+      "250000\n",
+      "312500\n",
+      "400000\n",
+      "500000\n",
+      "625000\n",
+      "1000000\n",
+      "1250000\n",
+      "2000000\n",
+      "2500000\n",
+      "5000000\n",
+      "10000000\n"
      ]
     }
    ],
    "source": [
-    "import math\n",
     "x = int(input(\"Please enter a positive integer: \"))\n",
     "i = 1\n",
     "factors = []\n",
-    "while i <= math.sqrt(x):\n",
+    "while i <= x ** 0.5:\n",
     "    if x % i == 0:\n",
     "        factors.append(i)\n",
     "        factors.append(int(x/i))\n",
